# glibapp

./: .gitignore  autogen.sh  config.h.in  configure.ac  libtool
extra/: Makefile
src/: Makefile.am  main.c
